--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-image-filter-kit": "^0.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "expo-speech": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
